--- a/qtfuzzylite/ui/qtfuzzylite.qrc
+++ b/qtfuzzylite/ui/qtfuzzylite.qrc
@@ -15,7 +15,7 @@
     <file>icons/edit_add.png</file>
     <file>icons/edit_remove.png</file>
     <file>icons/pencil.png</file>
-    <file>icons/btn_donateCC_LG.gif</file>
+    <file>icons/donate.png</file>
     <file>icons/qtfuzzylite.png</file>
     <file>icons/generosity.png</file>
   </qresource>
