--- a/qtfuzzylite/ui/Variable.ui
+++ b/qtfuzzylite/ui/Variable.ui
@@ -169,7 +169,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
+            <iconset resource="qtfuzzylite.qrc">
              <normaloff>:/icons/edit_add.png</normaloff>:/icons/edit_add.png</iconset>
            </property>
           </widget>
@@ -186,7 +186,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
+            <iconset resource="qtfuzzylite.qrc">
              <normaloff>:/icons/edit_remove.png</normaloff>:/icons/edit_remove.png</iconset>
            </property>
           </widget>
@@ -203,7 +203,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
+            <iconset resource="qtfuzzylite.qrc">
              <normaloff>:/icons/pencil.png</normaloff>:/icons/pencil.png</iconset>
            </property>
           </widget>
@@ -217,7 +217,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
+            <iconset resource="qtfuzzylite.qrc">
              <normaloff>:/icons/up.png</normaloff>:/icons/up.png</iconset>
            </property>
           </widget>
@@ -231,7 +231,7 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
+            <iconset resource="qtfuzzylite.qrc">
              <normaloff>:/icons/down.png</normaloff>:/icons/down.png</iconset>
            </property>
           </widget>
@@ -388,7 +388,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="qtfuzzylite.qrc"/>
  </resources>
  <connections>
   <connection>
