--- a/qtfuzzylite/ui/Window.ui
+++ b/qtfuzzylite/ui/Window.ui
@@ -26,7 +26,7 @@
    <string>qtfuzzylite</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
+   <iconset resource="qtfuzzylite.qrc">
     <normaloff>:/icons/qtfuzzylite.png</normaloff>:/icons/qtfuzzylite.png</iconset>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
@@ -132,7 +132,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/edit_add.png</normaloff>:/icons/edit_add.png</iconset>
                     </property>
                     <property name="shortcut">
@@ -152,7 +152,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/edit_remove.png</normaloff>:/icons/edit_remove.png</iconset>
                     </property>
                    </widget>
@@ -169,7 +169,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/pencil.png</normaloff>:/icons/pencil.png</iconset>
                     </property>
                    </widget>
@@ -222,7 +222,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/edit_add.png</normaloff>:/icons/edit_add.png</iconset>
                     </property>
                     <property name="shortcut">
@@ -242,7 +242,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/edit_remove.png</normaloff>:/icons/edit_remove.png</iconset>
                     </property>
                    </widget>
@@ -259,7 +259,7 @@
                      <string/>
                     </property>
                     <property name="icon">
-                     <iconset resource="resources.qrc">
+                     <iconset resource="qtfuzzylite.qrc">
                       <normaloff>:/icons/pencil.png</normaloff>:/icons/pencil.png</iconset>
                     </property>
                    </widget>
@@ -325,7 +325,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="resources.qrc">
+                    <iconset resource="qtfuzzylite.qrc">
                      <normaloff>:/icons/wizard.png</normaloff>:/icons/wizard.png</iconset>
                    </property>
                   </widget>
@@ -339,7 +339,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="resources.qrc">
+                    <iconset resource="qtfuzzylite.qrc">
                      <normaloff>:/icons/spellcheck.png</normaloff>:/icons/spellcheck.png</iconset>
                    </property>
                    <property name="shortcut">
@@ -753,7 +753,7 @@
   </widget>
   <action name="actionPreferences">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/configure.png</normaloff>:/icons/configure.png</iconset>
    </property>
    <property name="text">
@@ -768,7 +768,7 @@
   </action>
   <action name="actionTerms">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/colorize.png</normaloff>:/icons/colorize.png</iconset>
    </property>
    <property name="text">
@@ -786,7 +786,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/bottom.png</normaloff>:/icons/bottom.png</iconset>
    </property>
    <property name="text">
@@ -804,7 +804,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/top.png</normaloff>:/icons/top.png</iconset>
    </property>
    <property name="text">
@@ -819,7 +819,7 @@
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/filenew.png</normaloff>:/icons/filenew.png</iconset>
    </property>
    <property name="text">
@@ -834,7 +834,7 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/messagebox_info.png</normaloff>:/icons/messagebox_info.png</iconset>
    </property>
    <property name="text">
@@ -849,7 +849,7 @@
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset resource="resources.qrc">
+    <iconset resource="qtfuzzylite.qrc">
      <normaloff>:/icons/exit.png</normaloff>:/icons/exit.png</iconset>
    </property>
    <property name="text">
@@ -864,7 +864,7 @@
   </action>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="qtfuzzylite.qrc"/>
  </resources>
  <connections/>
 </ui>
