--- a/qtfuzzylite/ui/Wizard.ui
+++ b/qtfuzzylite/ui/Wizard.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>268</width>
+    <width>271</width>
     <height>179</height>
    </rect>
   </property>
@@ -19,7 +19,6 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-
   <property name="windowTitle">
    <string>Wizard</string>
   </property>
@@ -133,7 +132,6 @@
        </item>
        <item>
         <widget class="QPlainTextEdit" name="ptx_terms">
-
          <property name="tabChangesFocus">
           <bool>true</bool>
          </property>
@@ -192,7 +190,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="qtfuzzylite.qrc"/>
  </resources>
  <connections>
   <connection>
