--- a/qtfuzzylite/ui/Viewer.ui
+++ b/qtfuzzylite/ui/Viewer.ui
@@ -176,15 +176,7 @@
         <cursorShape>OpenHandCursor</cursorShape>
        </property>
        <property name="styleSheet">
-        <string notr="true">QSlider::handle:horizontal {
-image: url(:/icons/1uparrow.png);
-padding-left: -4px; padding-right: -4px;
- border: 1px solid #5c5c5c;
-border-radius: 8px;
-}
-
-
-</string>
+        <string notr="true"/>
        </property>
        <property name="maximum">
         <number>1000</number>
