Context menu with Viewer added

--- a/qtfuzzylite/ui/Preferences.ui
+++ b/qtfuzzylite/ui/Preferences.ui
@@ -17,10 +17,10 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Preferences</string>
+   <string>Settings</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="qtfuzzylite.qrc">
+   <iconset>
     <normaloff>:/icons/configure.png</normaloff>:/icons/configure.png</iconset>
   </property>
   <property name="sizeGripEnabled">
