--- a/qtfuzzylite/ui/About.ui
+++ b/qtfuzzylite/ui/About.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>280</width>
-    <height>357</height>
+    <width>287</width>
+    <height>359</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -98,7 +98,16 @@ There are still many things to do!&lt;/p&gt;
          <property name="spacing">
           <number>12</number>
          </property>
-         <property name="margin">
+         <property name="leftMargin">
+          <number>6</number>
+         </property>
+         <property name="topMargin">
+          <number>6</number>
+         </property>
+         <property name="rightMargin">
+          <number>6</number>
+         </property>
+         <property name="bottomMargin">
           <number>6</number>
          </property>
          <item>
