--- a/qtfuzzylite/ui/Term.ui
+++ b/qtfuzzylite/ui/Term.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>251</width>
+    <width>245</width>
     <height>462</height>
    </rect>
   </property>
@@ -95,7 +95,7 @@
         <enum>QTabWidget::Rounded</enum>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>3</number>
        </property>
        <property name="elideMode">
         <enum>Qt::ElideMiddle</enum>
@@ -136,7 +136,7 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>227</width>
+              <width>221</width>
               <height>219</height>
              </rect>
             </property>
@@ -229,8 +229,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>108</width>
-              <height>156</height>
+              <width>221</width>
+              <height>219</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -332,8 +332,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>128</width>
-              <height>90</height>
+              <width>221</width>
+              <height>219</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -415,8 +415,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>140</width>
-              <height>189</height>
+              <width>221</width>
+              <height>219</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -656,8 +656,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>147</width>
-              <height>156</height>
+              <width>221</width>
+              <height>157</height>
              </rect>
             </property>
             <attribute name="label">
@@ -1166,8 +1166,8 @@ sure 'x' is followed by 'y'.</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>132</width>
-              <height>90</height>
+              <width>221</width>
+              <height>219</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -1493,6 +1493,140 @@ sure 'x' is followed by 'y'.</string>
              </item>
             </layout>
            </widget>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_4">
+        <attribute name="title">
+         <string>f(x)</string>
+        </attribute>
+        <layout class="QVBoxLayout" name="verticalLayout_23">
+         <item>
+          <widget class="QToolBox" name="toolBox">
+           <property name="currentIndex">
+            <number>1</number>
+           </property>
+           <widget class="QWidget" name="page_16">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>203</width>
+              <height>190</height>
+             </rect>
+            </property>
+            <attribute name="label">
+             <string>Constant</string>
+            </attribute>
+            <layout class="QVBoxLayout" name="verticalLayout_25">
+             <item>
+              <widget class="QDoubleSpinBox" name="doubleSpinBox">
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+               <property name="minimum">
+                <double>-9999999.000000000000000</double>
+               </property>
+               <property name="maximum">
+                <double>9999999.000000000000000</double>
+               </property>
+               <property name="value">
+                <double>0.000000000000000</double>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+           <widget class="QWidget" name="page_17">
+            <property name="geometry">
+             <rect>
+              <x>0</x>
+              <y>0</y>
+              <width>203</width>
+              <height>190</height>
+             </rect>
+            </property>
+            <attribute name="label">
+             <string>Linear</string>
+            </attribute>
+            <layout class="QVBoxLayout" name="verticalLayout_24">
+             <item>
+              <widget class="QLabel" name="label_17">
+               <property name="text">
+                <string>f(x) = ax + by + c</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEdit"/>
+             </item>
+            </layout>
+           </widget>
+           <widget class="QWidget" name="page_18">
+            <attribute name="label">
+             <string>Custom</string>
+            </attribute>
+            <layout class="QVBoxLayout" name="verticalLayout_22">
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_21">
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <item>
+                <widget class="QTextEdit" name="textEdit">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Ignored" vsizetype="Minimum">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>100</height>
+                  </size>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_4">
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QToolButton" name="toolButton">
+                   <property name="text">
+                    <string>Process</string>
+                   </property>
+                   <property name="icon">
+                    <iconset resource="qtfuzzylite.qrc">
+                     <normaloff>:/process.png</normaloff>:/process.png</iconset>
+                   </property>
+                   <property name="toolButtonStyle">
+                    <enum>Qt::ToolButtonTextBesideIcon</enum>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+              </layout>
+             </item>
+            </layout>
+            <zorder>verticalGroupBox</zorder>
+            <zorder>layoutWidget</zorder>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <widget class="QGroupBox" name="verticalGroupBox">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <layout class="QVBoxLayout" name="verticalLayout_20"/>
           </widget>
          </item>
         </layout>
